# Antenna

./: .gitignore  PRD.md  README.md  config.json  docker-compose.yml  index.html  package-lock.json  package.json  setup_tui.py  tsconfig.json  vite.config.ts
backend/: agent_system.py  conftest.py  main.py  models.py  premade_pets.py  requirements.txt  sentinel.py  test_webhook.py  turbovec.py  vision_analyzer.py
backend/data/: custom_pets.json
backend/static/creator/: index.html
gateway/: Dockerfile  index.js  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: tauri.ts  websocket.ts
