[package]
name = "chronospet"
version = "1.0.0"
description = "Ambient Desktop Companion"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-global-shortcut = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = false
debug = 0
